# logprob-ranker

./: .gitignore  .pylintrc  .replit  README.md  __init__.py  check_env.py  demo_attribute_scoring.py  demo_logprob_score.py  demo_simple_attribute_scoring.py  example.py  info.md  package-lock.json  package.json  pyproject.toml  pytest.ini  run-tests.sh  theme.json  vitest.config.ts
client/: index.html
client/public/: environment.js
client/public/assets/: social-preview.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AuthFlow.tsx  BrowserLLM.tsx  BrowserModels.tsx  ChatInterface.tsx  ChatInterface.tsx.bak  CodeTabs.tsx  DemoSection.tsx  FlowVisualization.tsx  Footer.tsx  Header.tsx  MainLayout.tsx  ModelConfig.tsx  ModelSelection.tsx  OutputRanker.tsx  Overview.tsx  Sidebar.tsx  SocialPreview.tsx  Step1.tsx  Step2.tsx  Step3.tsx  TensorflowLLM.tsx
client/src/components/ui/: app-header.tsx  auth-button.tsx  auth-dropdown.tsx  auth-modal.tsx  code-block.tsx  composite-card.tsx  example-card.tsx  logo.tsx  nav-menu.tsx  (+11 more)
client/src/config/: app-config.ts  model-parameters.ts
client/src/hooks/: simplified-auth.ts  use-app-context.tsx  use-auth.tsx  use-chat-service.tsx  use-combined-model-config.tsx  use-model-config.tsx  use-models.ts  use-persistent-chat.ts  use-persistent-form.ts  use-simplified-auth.tsx  use-webllm.tsx
client/src/lib/: modelTypes.ts  openrouter.ts  utils.ts
client/src/pages/: callback.tsx  home.tsx  ranker.tsx
client/src/providers/: AppProvider.tsx
client/src/services/: api-service.ts  generator-service.ts  simplified-api.ts
client/src/tests/: api-client-integration.test.ts  api-integration.test.ts  api-key-authentication.test.ts  api-key-utils.test.ts  api-mock.test.ts  app-initialization.test.ts  auth-flow-component.test.tsx  auth-hook.test.tsx  auth-integration.test.ts  browser-llm-component.test.tsx  browser-model.test.ts  button.test.tsx  chat-service.test.ts  mock-server.test.ts  model-config-hook.test.tsx  model-config.test.ts  oauth-authentication-flow.test.tsx  oauth-flow.test.ts  output-ranker-integration.test.tsx  output-ranker.test.ts  ranked-output-component.test.tsx  server-integration.test.ts  setup.ts  simple.test.ts  storage-utils.test.ts  utils.test.ts
client/src/utils/: api-key-utils.ts  app-initializer.ts  chat-persistence.ts  dom-utils.ts  form-persistence.ts  memory-manager.ts  memory-monitor.ts  model-cleanup.ts  pkce.ts  settings-storage.ts  state-manager.ts  storage.ts
logprob_ranker/: .coverage  .gitignore  CHANGELOG.md  DEVELOPMENT_NOTES.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  __init__.py  pyproject.toml  pytest.ini  run-tests.sh  setup.py
logprob_ranker/docs/: api_usage.md  multi_provider_support.md
logprob_ranker/examples/: custom_llm_adapter.py  litellm_example.py  multi_provider_example.py  openai_example.py  openrouter_example.py  simple_example.py  simple_openai_example.py
logprob_ranker/examples/criteria_templates/: code_generation.json  creative_writing.json  customer_service.json  marketing_copy.json  product_ideas.json  technical_explanation.json
logprob_ranker/logprob_ranker/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  models.py  openrouter.py  ranker.py  utils.py
logprob_ranker/logprob_ranker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logprob_ranker/logprob_ranker/adapters/: litellm_adapter.py
logprob_ranker/tests/: README.md  conftest.py  run_async_tests.py  test_async_basic.py  test_cli.py  test_litellm_adapter.py  test_litellm_basic.py  test_litellm_functionality.py  test_logprob_ranker.py  test_openrouter.py  test_openrouter_e2e.py  test_ranker.py  test_usecase_e2e.py  test_usecase_e2e_fixed.py  test_utils.py
server/: api-routes.ts  index.ts  middleware.ts  routes.ts
shared/: schema.ts
tests/: test_ranker.py
