[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logprob-ranker"
version = "0.1.0"
description = "A package for ranking LLM outputs using log probability scoring"
readme = "README.md"
authors = [
    {name = "AI Developers", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.5.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0", 
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/logprob-ranker"
"Bug Tracker" = "https://github.com/yourusername/logprob-ranker/issues"

[project.scripts]
logprob-ranker = "logprob_ranker.cli:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true