[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logprob-ranker"
version = "0.2.0"
description = "A package for ranking LLM outputs using log probability scoring"
authors = [
    {name = "AI Developers", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0", 
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tom-doerr/logprob-ranker"
"Bug Tracker" = "https://github.com/tom-doerr/logprob-ranker/issues"

[project.scripts]
logprob-ranker = "logprob_ranker.cli:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:Pydantic V2 style Suggestion.*:UserWarning:litellm.*",
    "ignore:open_text is deprecated. Use files().*:DeprecationWarning:litellm.utils",
    "ignore:Use 'content=<...>' to upload raw bytes/text content.*:DeprecationWarning:httpx._models",
    "ignore:coroutine 'Logging.async_success_handler' was never awaited:RuntimeWarning:asyncio.base_events"
]

[tool.coverage.run]
branch = true

[tool.pylint.messages_control]